# Getriebesynthese

./: CMakeLists.txt  HOW-TO-BUILD.md  README.md
include/: CMakeLists.txt  grundpunkt.h
source/: CMakeLists.txt  synthese.cpp
templates/: 3LagenSynthese.tmpl
